<resources>
    <string name="app_name">CheckBlood</string>
    <string name="dismiss">Dismiss</string>
    <string name="skip">Skip</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="Password">Password</string>
    <string name="email">E-Mail</string>
    <string name="name">Name</string>
    <string name="blood_type">Blood Type</string>
    <string name="date">Date</string>
    <string name="last_donation_date">Last donation date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="govermentname">Government</string>
    <string name="citiesename">City</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="birthday">birthday</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_password_code">Change Password Code</string>
    <string name="code">Code</string>
    <string name="new_password">new password</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="favorite">Favorite</string>
    <string name="main">Main</string>
    <string name="instructions">Instructions</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="rate_app">Rate App</string>
    <string name="signout">Signout</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="alerts">Alerts</string>

    <string name="textforexample">This Text Is An Example Of Text That Can Be Replaced In The Same Space. This text is an example of text that can be replaced in the same space This text is an example of text that can be replaced in the same space</string>
    <string name="a1">A+</string>
    <string name="a2">A-</string>
    <string name="o1">O+</string>
    <string name="o2">O-</string>
    <string name="ab1">AB+</string>
    <string name="ab2">AB-</string>
    <string name="cities">Cities</string>
    <string name="cairo">Cairo</string>
    <string name="gharbia">Gharbia</string>
    <string name="almenia">AlMenia</string>
    <string name="elsharqia">ElSharqia</string>
    <string name="kafr_elshekh">Kafr ElShekh</string>
    <string name="eldaqhleya">ElDaqhleya</string>
    <string name="save">Save</string>
    <string name="about_us">About Us</string>
    <string name="phone_0122323223442">Phone:0122323223442</string>
    <string name="home">Home</string>
    <string name="articles">Articles</string>
    <string name="donation">Donation</string>
    <string name="age">Age</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="send_request">Send Request</string>
    <string name="protection_of_the_diseases">Protection of The Diseases</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="request_donate">Request Donate</string>
    <string name="contact">Contact</string>
    <string name="phone_01234567899">Phone : 01234567899</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="menu_profile">menu_profile</string>
    <string name="notificationsetting">menu_NotificationSettingFragment</string>
    <string name="menufavorite">menu_favorite</string>
    <string name="menuabout">menu_about</string>
    <string name="menucontact">menu_contact</string>
    <string name="title_activity_home2">Home2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
