<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notification_setting"
            android:icon="@drawable/notification"
            android:title="@string/notification_setting" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/main"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/instructions"
            android:title="@string/instructions" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/email"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/rate"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/signout"
            android:title="@string/signout" />
    </group>

</menu>
