<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/bk_960_1600"
    android:id="@+id/newpasswordfragment_cl_fragmentid">


    <ImageView
        android:id="@+id/newpasswordfragment_iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo_1024"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_password_code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/newpasswordfragment_iv_logo"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="@+id/newpasswordfragment_iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/newpasswordfragment_iv_logo" />

    <EditText
        android:id="@+id/newpasswordfragment_et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/newpasswordfragment_et_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_14dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/newpasswordfragment_et_code"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newpasswordfragment_et_code"
        app:layout_constraintTop_toBottomOf="@+id/newpasswordfragment_et_code" />

    <EditText
        android:id="@+id/newpasswordfragment_et_confirmdpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_14dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/newpasswordfragment_et_newpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newpasswordfragment_et_newpassword"
        app:layout_constraintTop_toBottomOf="@+id/newpasswordfragment_et_newpassword" />

    <Button
        android:id="@+id/newpasswordfragment_btn_changepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_14dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/green"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/newpasswordfragment_et_confirmdpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>