<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_960_1600"
    android:orientation="horizontal"
    tools:context=".view.Activity.UserActivity.UserActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dim_150"
        android:layout_height="@dimen/dim_150"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:background="@drawable/logo_1024"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginFragment_til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/loginFragment_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/dim_20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginFragment_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:hint="@string/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_til_phone">

        <EditText
            android:id="@+id/loginFragment_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/dim_20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/loginfragment_ch_RememberMe"
        android:layout_width="@dimen/dim_30dp"
        android:layout_height="@dimen/dim_30dp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_3dp"
        android:layout_marginBottom="@dimen/dim_8dp"
        app:layout_constraintBottom_toTopOf="@+id/loginfragment_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_til_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loginfragment_tv_Rememberme"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_20sp"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:gravity="center"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toStartOf="@+id/loginfragment_ch_RememberMe"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_til_password" />

    <TextView
        android:id="@+id/loginfragment_tv_Forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:layout_marginEnd="@dimen/dim_220"
        android:text="@string/forget_password"
        android:textSize="@dimen/dim_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/loginfragment_tv_Rememberme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_til_password" />

    <Button
        android:id="@+id/loginfragment_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:background="@color/green"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginfragment_tv_Forgetpassword"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/loginfragment_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:background="@color/blue"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_16sp"
        app:layout_constraintTop_toBottomOf="@+id/loginfragment_btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>
