<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_960_1600"
    android:id="@+id/forgetpasswordfragment_cl_fragment_id"
    >

    <ImageView
        android:id="@+id/forgetpasswordfragment_iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="88dp"
        android:background="@drawable/logo_1024"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dim_40"
        android:gravity="center"
        android:text="@string/change_password_code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/forgetpasswordfragment_iv_logo"
        app:layout_constraintStart_toStartOf="@+id/forgetpasswordfragment_iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/forgetpasswordfragment_iv_logo" />

    <EditText
        android:id="@+id/forgetpasswordfragment_et_phonenummber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_70dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="8dp"
        android:paddingStart="@dimen/dim_8dp"
        android:paddingEnd="@dimen/dim_8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/forgetpasswordfragment_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_70dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:background="@color/green"
        android:padding="8dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgetpasswordfragment_et_phonenummber" />


</androidx.constraintlayout.widget.ConstraintLayout>